# echoscript-backend

./: .audit_mypy_after.txt  .dockerignore  .env  .env.example  .env.redacted  .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLEANUP.md  Dockerfile  GEMINI_TEST.md  Procfile  README.md  Read.md  alembic.ini  asgi_dev.py  asgi_lifespan.py  asr_smoketest.py  backend_condensed.txt  build-ai-packs.ps1  clean-requirements.txt  create_transcripts_table.py  db.sqlite3  diagnose_audio_stack.py  dir_tree.txt  docker-compose (2).yml  echoscript-front.code-workspace  export.utils  init_db.py  main.py  mini.py  openapi_dump.json  package-lock.json  package.json  project.toml  project_tree.txt  prompt-backend-deploy.txt  pyproject.toml  (+6 more)
.audit/: import-boot.json  mypy.txt  patterns.json  pip-audit.txt  pipdeptree.txt  report.md
.audit_bundle_20250917_163813/: git-diff-names.txt  git-log.txt  git-remotes.txt  git-status.txt  import-boot.json  import_boot.py  mypy.txt  pip-freeze.txt  pip-install.txt  pip-tools.txt  pipdeptree.txt  ruff.txt  tree.txt  vulture.txt
.venv_audit/: pyvenv.cfg
AI_Packs/: PACK_INDEX.md  RepoInventory.csv  pack_001.txt  pack_002.txt  pack_003.txt  pack_004.txt  pack_005.txt  pack_006.txt  pack_007.txt  pack_008.txt  pack_009.txt  pack_010.txt  pack_011.txt  pack_012.txt  pack_013.txt  pack_014.txt  pack_015.txt  pack_016.txt  pack_017.txt  pack_018.txt  pack_019.txt  pack_020.txt  pack_021.txt  pack_022.txt  pack_023.txt  pack_024.txt  pack_025.txt  pack_026.txt  pack_027.txt  pack_028.txt  pack_029.txt  pack_030.txt  pack_031.txt  (+197 more)
(+436 files in other folders)
