[metadata]
name = echoscript-backend

[tool:pytest]
# (you can put pytest settings here if you like)

[mypy]
# Only type‑check your own code (app/ and tests/)
files = app, tests

# Never descend into your virtualenv
exclude = \.venv

# Don’t complain about missing stubs for third‑party libs
ignore_missing_imports = True

# Per‑file suppressions for known MyPy warnings
per-file-ignores =
    tests/*.py: no-redef
    app/utils/stripe_client.py: return-value, arg-type, attr-defined, assignment
    app/utils/export_utils.py: arg-type
    app/routes/history.py: attr-defined
    app/routes/stripe_webhook.py: attr-defined
    app/routes/subscription.py: assignment
    app/routes/verify_email.py: assignment
    app/routes/auth.py: arg-type
